[package]
name = "kent-calendar-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
boa_engine = { version = "0.19.1", features = ["deser"] }
chrono = "0.4.38"
icalendar = "0.16.8"
reqwest = { version = "0.12.7", features = ["json"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full", "macros"] }
